CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(fibio)

OPTION(BUILD_SHARED_LIBS "Build shared lib" OFF)
OPTION(WITH_VALGRIND "Build with valgrind support" ON)

SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(Boost 1.63.0 COMPONENTS system coroutine context thread REQUIRED)

IF ((CMAKE_BUILD_TYPE MATCHES Debug) OR (NOT CMAKE_BUILD_TYPE))
    IF (WITH_VALGRIND)
        MESSAGE("Enable valgrind support")
        ADD_DEFINITIONS(-DHAVE_VALGRIND_H)
    ELSE (WITH_VALGRIND)
        MESSAGE("Disable valgrind support")
    ENDIF (WITH_VALGRIND)
ENDIF ((CMAKE_BUILD_TYPE MATCHES Debug) OR (NOT CMAKE_BUILD_TYPE))

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(FIBIO_DEPS)
LIST(APPEND FIBIO_DEPS fibio ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})

SET(FIBIO_DEPS_INCS)
LIST(APPEND FIBIO_DEPS_INCS ${Boost_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})

INCLUDE_DIRECTORIES(AFTER ${CMAKE_SOURCE_DIR}/include)

IF (WIN32)
    LIST(APPEND FIBIO_DEPS wsock32 ws2_32)
ENDIF (WIN32)

SET(FIBIO_LIBS fibio ${FIBIO_DEPS})

ADD_SUBDIRECTORY(src)
